Adjusted table overlap issue for all administrator dashboards,updated sort filter for all admin pagesfor studentID and name

--- a/View_Attendance_style.css
+++ b/View_Attendance_style.css
@@ -23,6 +23,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    padding-top: 100px;
     background-color: #EFEFEF;
 }
 
@@ -122,10 +123,14 @@ header .navbar ul li:hover > ul{
 }
 
 main{
-    padding: 0px 20px 20px;
-    width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  margin-top: 120px;
 }
 
 .filter-section {
@@ -164,6 +169,9 @@ button:hover {
 .result-section{
     margin-top: 30px;
     text-align: center;
+    overflow-y: auto;
+    max-height: 500px;
+    margin-bottom: 50px;
 }
 
 table {
